# voice_clone_lab

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: default.yaml
patches/: sft_12hz.patch
recording_scripts/: README.md  voice_dataset_reading_script.txt
src/voice_clone_lab/: __init__.py  audio.py  cli.py  config.py  dataset.py  generate.py  sources.py  system.py  train.py  transcribe.py  ui.py  utils.py
tests/: conftest.py  test_audio.py  test_dataset.py  test_generate.py  test_sources.py  test_system.py  test_train.py  test_transcribe.py  test_ui.py
